# compositelab

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/compositelab/: __init__.py
src/compositelab/failure/: hashin.py
src/compositelab/layers/: __init__.py  layer.py  layup.py  visualization.py
src/compositelab/materials/: __init__.py  base.py  isotropic.py  orthotropic.py
src/compositelab/mechanics/: __init__.py  laminate.py  statevisualizer.py
tests/: hash.py  test lay.py  test_ABD.py  test_import.py  test_isotropic.py  test_orthotropic.py
